# pronostique_foot

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: cache.py  config.py  football_api.py  main.py  metrics.py  poisson_model.py  predictor.py  reconciler.py  storage.py  tuner.py
docs/: DEPLOIEMENT.md
docs/superpowers/plans/: 2026-06-27-pronostics-coupe-du-monde.md
docs/superpowers/specs/: 2026-06-27-pronostics-coupe-du-monde-design.md
frontend/: app.js  history.html  index.html  manifest.json  performance.html  style.css  sw.js
tests/: test_api.py  test_cache.py  test_config.py  test_football_api.py  test_metrics.py  test_poisson_model.py  test_predictor.py  test_reconciler.py  test_storage.py  test_tuner.py
