[project]
name = "pronostique-foot"
version = "0.1.0"
description = "Pronostics de scores de la Coupe du Monde 2026 (modèle de Poisson)."
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "requests==2.32.3",
    "numpy==1.26.4",
    "libsql-experimental==0.0.55",
]

# Application (not a distributable package): uv installs the dependencies but
# does not try to build/package this flat-layout project (no build-system needed).
[tool.uv]
package = false

# Vercel's native FastAPI framework reads the ASGI entrypoint from here.
# https://vercel.com/docs/frameworks/backend/fastapi#exporting-the-fastapi-application
[tool.vercel]
entrypoint = "backend.main:app"
